2005-10-22  Darin Adler  <darin@apple.com>

        - updated pixel results for tests with results that changed recently

        * editing/selection/3690703-2-expected.checksum:
        * editing/selection/3690703-2-expected.png:
        * editing/selection/3690703-expected.checksum:
        * editing/selection/3690703-expected.png:
        * editing/selection/3690719-expected.checksum:
        * editing/selection/3690719-expected.png:
        * fast/forms/001-expected.checksum:
        * fast/forms/001-expected.png:
        * fast/forms/form-element-geometry-expected.checksum:
        * fast/forms/form-element-geometry-expected.png:
        * fast/forms/formmove3-expected.checksum:
        * fast/forms/formmove3-expected.png:
        * fast/forms/input-value-expected.checksum:
        * fast/forms/input-value-expected.png:
        * fast/selectors/064-expected.checksum:
        * fast/selectors/064-expected.png:

        - added pixel results for a bunch of tests that, for whatever reason, didn't have them

        * dom/xhtml/level2/html/HTMLBaseElement01-expected.checksum: Added.
        * dom/xhtml/level2/html/HTMLBaseElement01-expected.png: Added.
        * dom/xhtml/level2/html/HTMLBaseElement02-expected.checksum: Added.
        * dom/xhtml/level2/html/HTMLBaseElement02-expected.png: Added.
        * dom/xhtml/level2/html/HTMLBodyElement01-expected.checksum: Added.
        * dom/xhtml/level2/html/HTMLBodyElement01-expected.png: Added.
        * dom/xhtml/level2/html/HTMLBodyElement02-expected.checksum: Added.
        * dom/xhtml/level2/html/HTMLBodyElement02-expected.png: Added.
        * dom/xhtml/level2/html/HTMLBodyElement03-expected.checksum: Added.
        * dom/xhtml/level2/html/HTMLBodyElement03-expected.png: Added.
        * dom/xhtml/level2/html/HTMLBodyElement04-expected.checksum: Added.
        * dom/xhtml/level2/html/HTMLBodyElement04-expected.png: Added.
        * dom/xhtml/level2/html/HTMLBodyElement05-expected.checksum: Added.