@@ -1,0 +1,18 @@
+layer at (0,0) size 800x600
+  RenderCanvas at (0,0) size 800x600
+layer at (0,0) size 800x128
+  RenderBlock {HTML} at (0,0) size 800x128
+    RenderBody {BODY} at (8,8) size 784x104
+      RenderBlock {DIV} at (0,0) size 784x104
+        RenderBlock (anonymous) at (0,0) size 784x18
+          RenderText {TEXT} at (0,0) size 188x18
+            text run at (0,0) width 188: "This div contains 3 addresses:"
+        RenderBlock {ADDRESS} at (16,18) size 768x18 [bgcolor=#00FF00]
+          RenderText {TEXT} at (0,0) size 331x18
+            text run at (0,0) width 331: "A first address that should have a green background"
+        RenderBlock {ADDRESS} at (16,52) size 768x18
+          RenderText {TEXT} at (0,0) size 272x18
+            text run at (0,0) width 272: "A second address with normal background"
+        RenderBlock {ADDRESS} at (16,86) size 768x18
+          RenderText {TEXT} at (0,0) size 258x18
+            text run at (0,0) width 258: "A third address with normal background"
